# n_body_simulation

./: .gitignore  Cargo.toml  README.md
python/: pyproject.toml
python/n_body/: __init__.py  cli.py  config.py  initialization.py  io.py  physics.py  simulation.py  viz.py
python/tests/: test_physics.py  test_simulation.py
src/: main.rs
