[package]
name = "n_body_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0" # For parallel processing
rand = "0.8.5"   # For random number generation
clap = { version = "4.5.4", features = ["derive"] } # For command-line argument parsing
csv = "1.3.0"    # For writing CSV files
