[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "n-body-sim"
version = "0.1.0"
description = "Python N-body simulation package"
authors = [{ name = "Marin" }]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
viz = [
  "matplotlib>=3.7",
]

dev = [
  "pytest>=7.4",
]

[project.scripts]
n-body = "n_body.cli:main"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["n_body*"]
